[gd_scene load_steps=38 format=2]

[ext_resource path="res://assets/zombie_m/Idle (5).png" type="Texture" id=1]
[ext_resource path="res://assets/zombie_m/Idle (14).png" type="Texture" id=2]
[ext_resource path="res://assets/zombie_m/Walk (7).png" type="Texture" id=3]
[ext_resource path="res://assets/zombie_m/Walk (9).png" type="Texture" id=4]
[ext_resource path="res://assets/zombie_m/Walk (10).png" type="Texture" id=5]
[ext_resource path="res://assets/zombie_m/Walk (4).png" type="Texture" id=6]
[ext_resource path="res://assets/zombie_m/Walk (1).png" type="Texture" id=7]
[ext_resource path="res://assets/zombie_m/Idle (12).png" type="Texture" id=8]
[ext_resource path="res://assets/zombie_m/Idle (9).png" type="Texture" id=9]
[ext_resource path="res://assets/zombie_m/Idle (15).png" type="Texture" id=10]
[ext_resource path="res://assets/zombie_m/Idle (11).png" type="Texture" id=11]
[ext_resource path="res://assets/zombie_m/Idle (4).png" type="Texture" id=12]
[ext_resource path="res://assets/zombie_m/Walk (3).png" type="Texture" id=13]
[ext_resource path="res://assets/zombie_m/Walk (8).png" type="Texture" id=14]
[ext_resource path="res://assets/zombie_m/Idle (2).png" type="Texture" id=15]
[ext_resource path="res://assets/zombie_m/Idle (13).png" type="Texture" id=16]
[ext_resource path="res://assets/zombie_m/Idle (8).png" type="Texture" id=17]
[ext_resource path="res://assets/zombie_m/Walk (2).png" type="Texture" id=18]
[ext_resource path="res://assets/zombie_m/Idle (7).png" type="Texture" id=19]
[ext_resource path="res://assets/zombie_m/Idle (1).png" type="Texture" id=20]
[ext_resource path="res://assets/zombie_m/Walk (5).png" type="Texture" id=21]
[ext_resource path="res://assets/zombie_m/Idle (6).png" type="Texture" id=22]
[ext_resource path="res://assets/zombie_m/Idle (3).png" type="Texture" id=23]
[ext_resource path="res://assets/zombie_m/Walk (6).png" type="Texture" id=24]
[ext_resource path="res://assets/zombie_m/Idle (10).png" type="Texture" id=25]
[ext_resource path="res://scenes/zombie.gd" type="Script" id=26]
[ext_resource path="res://assets/zombie_m/Attack (3).png" type="Texture" id=27]
[ext_resource path="res://assets/zombie_m/Attack (5).png" type="Texture" id=28]
[ext_resource path="res://assets/zombie_m/Attack (6).png" type="Texture" id=29]
[ext_resource path="res://assets/zombie_m/Attack (2).png" type="Texture" id=30]
[ext_resource path="res://assets/zombie_m/Attack (7).png" type="Texture" id=31]
[ext_resource path="res://assets/zombie_m/Attack (1).png" type="Texture" id=32]
[ext_resource path="res://assets/zombie_m/Attack (8).png" type="Texture" id=33]
[ext_resource path="res://assets/zombie_m/Attack (4).png" type="Texture" id=34]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 32 ), ExtResource( 30 ), ExtResource( 27 ), ExtResource( 34 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 31 ), ExtResource( 33 ) ],
"loop": true,
"name": "attack",
"speed": 7.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 15 ), ExtResource( 23 ), ExtResource( 12 ), ExtResource( 1 ), ExtResource( 22 ), ExtResource( 19 ), ExtResource( 17 ), ExtResource( 9 ), ExtResource( 25 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 16 ), ExtResource( 2 ), ExtResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 18 ), ExtResource( 13 ), ExtResource( 6 ), ExtResource( 21 ), ExtResource( 24 ), ExtResource( 3 ), ExtResource( 14 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 38.0
height = 124.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18, 31 )

[node name="Zombie" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 13
script = ExtResource( 26 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 10, 0 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "idle"
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 21 )
shape = SubResource( 2 )

[node name="FeetCheck" type="RayCast2D" parent="."]
position = Vector2( 0, 104 )
cast_to = Vector2( 0, 45 )
collision_mask = 4

[node name="PlayerCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 120, 0 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, 29 )
shape = SubResource( 3 )

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
